[package]
name = "napi-leak"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { path = "../../github/napi-rs/crates/napi", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = { path = "../../github/napi-rs/crates/macro", default-features = false, features = ["strict", "type-def"] }

[build-dependencies]
napi-build = "2.1.0"
